force-app/main/default/objects/SPEN_WorkCategory__c/SPEN_WorkCategory__c.object-meta.xml
<CustomObject>
    <label>Work Category</label>
    <nameField>
        <label>Work Category</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>