force-app/main/default/objects/SPEN_WorkCategory__c/fields/SPEN_AutoCreate_DesignChecklist__c.field-meta.xml
<CustomField>
    <fullName>SPEN_AutoCreate_DesignChecklist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Create Design Checklist</label>
    <type>Checkbox</type>
</CustomField>