force-app/main/default/objects/SPEN_WorkCategory__c/fields/SPEN_Description__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Description__c</fullName>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>