force-app/main/default/objects/SPEN_WorkCategory__c/fields/SPEN_LeadTime__c.field-meta.xml
<CustomField>
    <fullName>SPEN_LeadTime__c</fullName>
    <label>Lead Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>