force-app/main/default/objects/SPEN_WorkCategory__c/fields/SPEN_ParentWorkCategory__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ParentWorkCategory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will relate to the parent work category</description>
    <label>Parent Work Category</label>
    <referenceTo>SPEN_WorkCategory__c</referenceTo>
    <relationshipLabel>Work Categories</relationshipLabel>
    <relationshipName>Work_Categories</relationshipName>
    <type>Lookup</type>
</CustomField>