force-app/main/default/objects/SPEN_WorkCategory__c/fields/SPEN_RIRRequired__c.field-meta.xml
<CustomField>
    <fullName>SPEN_RIRRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RIR Required?</label>
    <type>Checkbox</type>
</CustomField>