force-app/main/default/objects/SPEN_WorkCategory__c/fields/SPEN_Sum_LeadTime__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Sum_LeadTime__c</fullName>
    <label>Total Lead Time</label>
    <summarizedField>SPEN_WorkCategoryMilestone__c.SPEN_LeadTime__c</summarizedField>
    <summaryForeignKey>SPEN_WorkCategoryMilestone__c.SPEN_WorkCategory__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>