force-app/main/default/objects/SPEN_WorkCategory__c/fields/SPEN_WorkCategoryTitle__c.field-meta.xml
<CustomField>
    <fullName>SPEN_WorkCategoryTitle__c</fullName>
    <description>Created as part of ESC-814</description>
    <label>Work Category Title</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SPEN_LicenseArea__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>CCT Customer Contact Enquiry</fullName>
            </value>
            <value>
                <fullName>Change of Owner</fullName>
            </value>
            <value>
                <fullName>Change of Owner Estate</fullName>
            </value>
            <value>
                <fullName>Change of Owner Farm</fullName>
            </value>
            <value>
                <fullName>Change of Owner Garden</fullName>
            </value>
            <value>
                <fullName>Change Of Vendor Details</fullName>
            </value>
            <value>
                <fullName>Completed Necessary Wayleave</fullName>
            </value>
            <value>
                <fullName>CRM Customer Complaint</fullName>
            </value>
            <value>
                <fullName>Damage Claim</fullName>
            </value>
            <value>
                <fullName>Decomissioning</fullName>
            </value>
            <value>
                <fullName>District Day to Day</fullName>
            </value>
            <value>
                <fullName>External Land Search Request</fullName>
            </value>
            <value>
                <fullName>Fibre Optic Cable</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Finance Receipting</fullName>
                <isActive>false</isActive>
                <label>Finance Receipting</label>
            </value>
            <value>
                <fullName>Incorporated Rights - All</fullName>
            </value>
            <value>
                <fullName>Injurious Affection</fullName>
            </value>
            <value>
                <fullName>Land Enquiry</fullName>
            </value>
            <value>
                <fullName>Land Rights Enquiry</fullName>
            </value>
            <value>
                <fullName>LVSSA</fullName>
            </value>
            <value>
                <fullName>LVSSA Servitude/Easement ** temp w/l</fullName>
                <isActive>false</isActive>
                <label>LVSSA Servitude/Easement ** temp w/l</label>
            </value>
            <value>
                <fullName>LVSSB</fullName>
            </value>
            <value>
                <fullName>LVSSB Servitude/Easement ** temp w/l</fullName>
                <isActive>false</isActive>
                <label>LVSSB Servitude/Easement ** temp w/l</label>
            </value>
            <value>
                <fullName>Maintenance Works - Non Outage</fullName>
            </value>
            <value>
                <fullName>Maintenance Works - Outage</fullName>
            </value>
            <value>
                <fullName>Major Refurb No planning</fullName>
            </value>
            <value>
                <fullName>Major Refurb Planning</fullName>
            </value>
            <value>
                <fullName>Major Refurb S37</fullName>
            </value>
            <value>
                <fullName>New Marine Cable with Planning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>