force-app/main/default/objects/SPEN_WorkCategory__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SPEN_ParentWorkCategory__c</columns>
    <columns>SPEN_Description__c</columns>
    <columns>SPEN_LicenseArea__c</columns>
    <columns>SPEN_WorkCategoryTitle__c</columns>
    <columns>SPEN_LeadTime__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>